--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ title: "Boardroom | Business Infinity"
       <div class="boardroom-container-fluid">
         <div class="boardroom-main-row flex-grow-1 d-flex flex-row min-vh-100">
           <!-- Sidebar Container (toggle strip + sidebar) -->
-          {% include boardroom/sidebar.html %}
+          {% include boardroom/members-sidebar.html %}
           <!-- Chat Area -->
           {% include boardroom/chat-area.html %}
         </div>
