--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: "Boardroom | Business Infinity"
 <main class="boardroom-boardroom-container">
   <section class="boardroom-section">
     <div class="boardroom-container-fluid">
-      <div class="boardroom-main-row flex-grow-1 d-flex flex-row min-vh-100">
+      <div class="boardroom-main-row">
         <!-- Sidebar Container (toggle strip + sidebar) -->
         {% include boardroom/members-sidebar.html %}
         <!-- Chat Area -->
