--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@ title: "Boardroom | Business Infinity"
   <section class="boardroom-section">
     <div class="boardroom-container-fluid">
       <div class="boardroom-main-row">
+        <!-- Members Sidebar Toggle Strip -->
+        {% include boardroom/toggle-strip.html %}
+
         <!-- Members Sidebar Container (toggle strip + sidebar) -->
         {% include boardroom/members-sidebar.html %}
+        
         <!-- Chat Area -->
         {% include boardroom/chat-area.html %}
       </div>
