--- a/index.html
+++ b/index.html
@@ -13,4 +13,16 @@ title: "Boardroom | Business Infinity"
       </div>
     </div>
   </section>
+  
+  <!-- Loading overlay -->
+  <div class="boardroom-loading-overlay" id="boardroom-loading">
+    <div class="boardroom-loading-content">
+      <div class="boardroom-loading-spinner"></div>
+      <p class="boardroom-loading-text">Connecting to boardroom...</p>
+    </div>
+  </div>
+  
+  <!-- Toast notifications -->
+  <div class="boardroom-toast-container" id="boardroom-toasts" aria-live="polite" aria-atomic="true">
+  </div>
 </main>
