--- a/boardroom2/index.html
+++ b/boardroom2/index.html
@@ -3,35 +3,6 @@ title: Boardroom Mode
 layout: default
 ---
 
-<div class="boardroom-mode row">
-  <!-- Sidebar: C-suite avatars -->
-  <aside class="col-md-3 profiles-sidebar">
-    <h4>C-Suite Panel</h4>
-    <ul id="boardroom-list" class="list-unstyled">
-      <!-- JS will inject <li data-id="cto">…</li> -->
-    </ul>
-  </aside>
-
-  <!-- Main: Chat + Profile Details -->
-  <section class="col-md-9">
-    <div id="profile-detail" class="card mb-4">
-      <!-- Populated by JS on avatar click -->
-      <div class="card-body"></div>
-    </div>
-
-    <div class="chat-window card">
-      <div class="card-header">Entrepreneur ↔ Agents</div>
-      <div class="card-body">
-        <div id="chat-messages" class="messages mb-3"></div>
-        <div class="input-group">
-          <input id="chat-input" type="text" class="form-control" placeholder="Your message…"/>
-          <div class="input-group-append">
-            <button id="chat-send-btn" class="btn btn-primary">Send</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-</div>
+<boardroom-app/>
 
 <script type="module" src="{{ '/assets/js/boardroom2.js' | relative_url }}"></script>
