--- a/boardroom2/index.html
+++ b/boardroom2/index.html
@@ -3,6 +3,6 @@ title: Boardroom Mode
 layout: default
 ---
 
-<boardroom-app/>
+<boardroom/>
 
-<script type="module" src="{{ '/assets/js/boardroom2.js' | relative_url }}"></script>
+<script type="module" src="{{ '/assets/js/Boardroom.js' | relative_url }}"></script>
