--- a/bmc/index.html
+++ b/bmc/index.html
@@ -3,56 +3,108 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Business Model Canvas — Business Infinity | ASI Saga</title>
-  <meta name="description" content="Business Model Canvas for Business Infinity by ASI Saga — a narrative-driven, Azure-native orchestration platform for industrial transformation." />
+  <title>Business Infinity — Business Model Canvas</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <header>
-    <div class="topbar">
-      <div class="brand">
-        <div class="logo" aria-label="ASI Saga — Business Infinity"></div>
-        <div>
-          <h1>Business Infinity — Business Model Canvas</h1>
-          <div class="sub">ASI Saga • Narrative-driven, Azure-native orchestration for industrial transformation</div>
-        </div>
-      </div>
-      <div class="actions">
-        <button class="primary" onclick="window.print()">Print / Save as PDF</button>
-        <button onclick="toggleSample()">Toggle sample content</button>
-      </div>
-    </div>
-    <div class="meta">
-      <span>Prepared for: Leadership & Diversification Team</span>
-      <span>Owner: ASI Saga • Product: Business Infinity</span>
-      <span id="updated">Last updated: </span>
-      <span>Locale: Bengaluru, India (IST)</span>
-      <span>Version: 1.0</span>
-    </div>
-  </header>
+<header>
+  <h1>Business Infinity — Business Model Canvas</h1>
+  <div class="subtitle">ASI Saga’s AI Boardroom: Dual‑Market Vision with Recursive & Exponential Network Effect</div>
+</header>
 
-  <main>
-    <section class="grid" id="bmc">
-      <article><h2>Key Partners</h2><ul data-field><li>Coal logistics teams</li><li>Azure cloud services</li><li>Enrollment protocol designers</li></ul></article>
-      <article><h2>Key Activities</h2><ul data-field><li>Modular MCP orchestration</li><li>Narrative-driven UX design</li><li>Agentic pipeline deployment</li></ul></article>
-      <article><h2>Key Resources</h2><ul data-field><li>Azure Functions, Service Bus</li><li>SK agents, LoRA pipelines</li><li>Legacy ISG expertise</li></ul></article>
-      <article><h2>Value Propositions</h2><ul data-field><li>Preserve ISG legacy through diversification</li><li>Human-centered transformation</li><li>Scalable, reproducible workflows</li></ul></article>
-      <article><h2>Customer Relationships</h2><ul data-field><li>Enrollment-based engagement</li><li>Strategic co-design sessions</li><li>Long-term transformation support</li></ul></article>
-      <article><h2>Channels</h2><ul data-field><li>Leadership workshops</li><li>Azure-native deployments</li><li>Narrative-driven dashboards</li></ul></article>
-      <article><h2>Customer Segments</h2><ul data-field><li>CHP/AHP clients</li><li>Diversification stakeholders</li><li>Industrial transformation leaders</li></ul></article>
-      <article><h2>Cost Structure</h2><ul data-field><li>Cloud infrastructure</li><li>Protocol development</li><li>Team onboarding & training</li></ul></article>
-      <article><h2>Revenue Streams</h2><ul data-field><li>Strategic transformation contracts</li><li>Subscription to orchestration platform</li><li>Consulting & enrollment services</li></ul></article>
-    </section>
+<main>
+  <section class="grid">
+    <article>
+      <h2>Customer Segments</h2>
+      <ul data-field>
+        <li>Startups & scale‑ups: seed to Series‑C across all sectors</li>
+        <li>Enterprises & industrial conglomerates</li>
+        <li>Supply chain networks & consortia</li>
+      </ul>
+    </article>
+    <article>
+      <h2>Value Propositions</h2>
+      <ul data-field>
+        <li>Persistent AI C‑suite agents trained on domain‑pioneer knowledge</li>
+        <li>Seamless orchestration over ERP, MES, CRM & SaaS</li>
+        <li>Inter‑boardroom protocols enabling 24/7 supply chain collaboration</li>
+        <li>Enterprise‑grade decision power for startups without enterprise bloat</li>
+        <li>Recursive learning loops — every node makes the network smarter</li>
+      </ul>
+    </article>
+    <article>
+      <h2>Channels</h2>
+      <ul data-field>
+        <li>Startup accelerators & VC portfolios</li>
+        <li>ERP/MES/CRM vendor co‑sell</li>
+        <li>Industry events & thought leadership</li>
+        <li>Founder networks</li>
+      </ul>
+    </article>
+    <article>
+      <h2>Customer Relationships</h2>
+      <ul data-field>
+        <li>Co‑created agent charters & governance workshops</li>
+        <li>Community of practice across boardrooms</li>
+        <li>Self‑serve onboarding for startups</li>
+        <li>High‑touch enterprise deployment & governance councils</li>
+      </ul>
+    </article>
+    <article>
+      <h2>Revenue Streams</h2>
+      <ul data-field>
+        <li>Subscription per boardroom instance (role‑based tiers)</li>
+        <li>Usage‑based inter‑boardroom negotiation fees</li>
+        <li>Premium ERP/MES/CRM integrations</li>
+        <li>Domain tuning & charter design services</li>
+      </ul>
+    </article>
+    <article>
+      <h2>Key Resources</h2>
+      <ul data-field>
+        <li>Domain‑specific LLM models & LoRA adapters</li>
+        <li>Integration middleware for ERP/MES/CRM/SaaS</li>
+        <li>Boardroom ontology, decision ledger & observability stack</li>
+        <li>Governance frameworks & escalation protocols</li>
+        <li>Partner ecosystem & domain corpora</li>
+      </ul>
+    </article>
+    <article>
+      <h2>Key Activities</h2>
+      <ul data-field>
+        <li>Maintain & retrain domain‑tuned agents</li>
+        <li>Integrate enterprise & startup SaaS tools</li>
+        <li>Operate inter‑boardroom comms protocols</li>
+        <li>Facilitate recursive learning loops</li>
+      </ul>
+    </article>
+    <article>
+      <h2>Key Partners</h2>
+      <ul data-field>
+        <li>ERP/MES/CRM vendors (SAP, D365, Salesforce, Odoo, Zoho)</li>
+        <li>System integrators & startup tech enablers</li>
+        <li>Incubators, accelerators, cloud credit programs</li>
+        <li>Industry consortia & regulatory bodies</li>
+      </ul>
+    </article>
+    <article>
+      <h2>Cost Structure</h2>
+      <ul data-field>
+        <li>Model hosting & training</li>
+        <li>Integration & API maintenance</li>
+        <li>Security, compliance & audit</li>
+        <li>Customer success & community management</li>
+        <li>R&D for new agents & protocols</li>
+      </ul>
+    </article>
+  </section>
 
-    <section class="flex-row">
-      <div class="panel"><h3>Assumptions</h3><ul><li>ISG identity must be preserved</li><li>Enrollment is key to transformation</li><li>Technical and human dimensions must align</li></ul></div>
-      <div class="panel"><h3>KPIs</h3><ul><li>Verticals activated</li><li>Team cohesion metrics</li><li>Enrollment success rate</li></ul></div>
-      <div class="panel"><h3>Next Steps</h3><ul><li>Deploy MCP persistence layer</li><li>Conduct stakeholder workshops</li><li>Refine narrative protocols</li></ul></div>
-    </section>
+  <section class="actions">
+    <button class="primary" onclick="window.print()">Print / Save as PDF</button>
+    <button onclick="toggleSample()">Toggle sample content</button>
+  </section>
+</main>
 
-    <div class="note">Tip: Use “Toggle sample content” to clear and adapt this canvas during workshops. Print to share as a one-pager.</div>
-  </main>
-
-  <script src="script.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
