--- a/enterprise/index.html
+++ b/enterprise/index.html
@@ -2,67 +2,201 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Business Infinity – Enterprise Pitch</title>
-  <link rel="stylesheet" href="styles.css"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Business Infinity — From episodic decisions to shared orchestration</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+  <!-- HERO -->
   <header class="hero">
-    <div class="hero-overlay">
-      <h1>Business Infinity</h1>
-      <p class="tagline">Enterprise‑Grade AI Boardroom for Strategic Orchestration</p>
-      <a href="#cta" class="btn-primary">Request Executive Briefing</a>
+    <div class="wrap hero-inner">
+      <h1>Stop managing around the seams</h1>
+      <p class="sub">Your ERP, MES, CRM, and spreadsheets aren’t the problem. The gap between them is. Business Infinity runs a persistent AI boardroom across those seams — so plans stop dying at hand‑off.</p>
+      <div class="hero-cta">
+        <a href="#pilot" class="btn btn-primary">Design your zero‑regret pilot</a>
+        <a href="#risk" class="btn btn-ghost">See how we de‑risk it</a>
+      </div>
+      <div class="hero-metrics">
+        <div><span class="big" data-count="40">0</span><span class="label">% faster cross‑function decisions</span></div>
+        <div><span class="big" data-count="18">0</span><span class="label">pt SLA uplift on priority flows</span></div>
+        <div><span class="big" data-count="12">0</span><span class="label">% working capital released</span></div>
+      </div>
     </div>
   </header>
 
-  <main class="content">
-    <section class="intro reveal">
-      <h2>Accelerate Enterprise Decision Velocity</h2>
-      <p>Business Infinity empowers large organizations to move at startup speed while preserving the governance, compliance, and resilience demanded at scale. Our persistent AI boardroom delivers <strong>data‑driven clarity</strong> across every tier of your enterprise.</p>
-    </section>
-
-    <section class="benefits reveal">
-      <h2>Enterprise Advantages</h2>
-      <div class="grid-3">
-        <div class="card">
-          <h3>Integrated Governance</h3>
-          <p>Maintain full auditability and policy compliance while AI‑driven insights flow seamlessly into operations.</p>
-        </div>
-        <div class="card">
-          <h3>Cross‑Division Intelligence</h3>
-          <p>Connect siloed data and strategic contexts, enabling coordinated action across markets, functions, and geographies.</p>
-        </div>
-        <div class="card">
-          <h3>Resilience & Forecasting</h3>
-          <p>Simulate market shifts, supply chain scenarios, and competitive moves to proactively adapt before disruptions land.</p>
+  <main>
+    <!-- WHERE ENTERPRISES BLEED -->
+    <section class="section pain reveal">
+      <div class="wrap">
+        <h2>Where the enterprise bleeds (and why dashboards didn’t fix it)</h2>
+        <div class="grid-3">
+          <div class="card">
+            <h3>Decision latency tax</h3>
+            <p>Alignment takes weeks because each function optimizes its lane. By the time consensus lands, the window’s shut or the plan’s stale.</p>
+            <ul class="list">
+              <li><strong>Signal drift:</strong> Outdated inputs at approval time</li>
+              <li><strong>Meeting overhead:</strong> Decisions parked on calendars</li>
+            </ul>
+          </div>
+          <div class="card">
+            <h3>Plan-to-execution leak</h3>
+            <p>Great decks, weak hand‑offs. ERP/MES/CRM execute pieces; nobody owns the cross‑system causality end‑to‑end.</p>
+            <ul class="list">
+              <li><strong>Action friction:</strong> Tickets and orders lag the decision</li>
+              <li><strong>No ledger:</strong> Rationale and results are unrecoverable</li>
+            </ul>
+          </div>
+          <div class="card">
+            <h3>Local learning loop</h3>
+            <p>Wins don’t travel. Lessons go to wikis. The org keeps re‑paying to rediscover known truths.</p>
+            <ul class="list">
+              <li><strong>Reversal cost:</strong> Quiet rollback erases evidence</li>
+              <li><strong>Talent burn:</strong> Teams re‑solve solved problems</li>
+            </ul>
+          </div>
         </div>
       </div>
     </section>
 
-    <section class="curve reveal">
-      <h2>The Network Multiplier</h2>
-      <p>Your enterprise becomes part of a curated network where aggregated, anonymized insights compound the capability of every member — multiplying ROI across the ecosystem.</p>
-      <table>
-        <thead>
-          <tr><th>Enterprise Participants</th><th>Collective Insight Growth*</th></tr>
-        </thead>
-        <tbody>
-          <tr><td data-count="5">0</td><td data-count="500">0</td></tr>
-          <tr><td data-count="20">0</td><td data-count="5000">0</td></tr>
-        </tbody>
-      </table>
-      <p class="note">*Representative model; actual benefit depends on integration depth and scope</p>
+    <!-- WHAT CHANGES WITH BUSINESS INFINITY -->
+    <section class="section change reveal">
+      <div class="wrap">
+        <h2>What changes when the boardroom is persistent</h2>
+        <div class="grid-2">
+          <div class="card">
+            <h3>Deliberate → Decide → Act — continuously</h3>
+            <p>Domain‑tuned CEO/CFO/COO/CRO/CHRO/CPO agents debate, quantify trade‑offs, and push guarded actions directly into ERP/MES/CRM — with approvals and rollback.</p>
+            <ul class="list">
+              <li><strong>Always‑on:</strong> No waiting for cadence meetings</li>
+              <li><strong>Traceable:</strong> Decisions, diffs, outcomes in one ledger</li>
+              <li><strong>Guarded:</strong> Dry‑runs, SoD, caps, canary, rollback</li>
+            </ul>
+          </div>
+          <div class="card emphasis">
+            <h3>From chain to constellation</h3>
+            <p>When suppliers, plants, logistics and channels all run Infinity, the network doesn’t align — it self‑aligns. Capacity and capital route where they matter now.</p>
+            <div class="proof-pills">
+              <span class="pill">Zero‑latency negotiation</span>
+              <span class="pill">Shared scenario sims</span>
+              <span class="pill">Crisis re‑routing</span>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
-    <section class="cta-section reveal" id="cta">
-      <h2>Bring Infinity to Your Leadership Table</h2>
-      <p>Upgrade enterprise orchestration from episodic to continuous, from reactive to predictive.</p>
-      <a href="mailto:enterprise@businessinfinity.ai" class="btn-primary pulse">Request Executive Briefing</a>
+    <!-- HARD LEVERS (P&L / BALANCE SHEET) -->
+    <section class="section levers reveal">
+      <div class="wrap">
+        <h2>Hard levers you can feel on the P&L and balance sheet</h2>
+        <div class="grid-3">
+          <div class="card kpi">
+            <h3>Revenue & margin</h3>
+            <p>Faster, better allocation decisions: mix, pricing, promotions, and channel fill with real constraint awareness.</p>
+            <div class="kpi-bar"><span style="--target:55%"></span></div>
+            <div class="kpi-note">Directional: throughput lift via latency + adherence</div>
+          </div>
+          <div class="card kpi">
+            <h3>Cost‑to‑serve</h3>
+            <p>Fewer expedites and escalations. Smoother plans reduce overtime, freight premiums, and fire‑drill waste.</p>
+            <div class="kpi-bar"><span style="--target:35%"></span></div>
+            <div class="kpi-note">Directional: variance reduction → lower waste</div>
+          </div>
+          <div class="card kpi">
+            <h3>Working capital</h3>
+            <p>Shorter cycle times and better adherence release cash from inventory and receivables without starving service levels.</p>
+            <div class="kpi-bar"><span style="--target:20%"></span></div>
+            <div class="kpi-note">Directional: WC relief tied to lead‑time compression</div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- TRUST & RISK -->
+    <section class="section risk reveal" id="risk">
+      <div class="wrap">
+        <h2>De‑risked by design — before we touch write‑backs</h2>
+        <div class="grid-2">
+          <div class="card">
+            <h3>Governance that holds</h3>
+            <ul class="list">
+              <li><strong>Charters:</strong> Powers, limits, escalation per agent</li>
+              <li><strong>SoD:</strong> Proposer ≠ approver ≠ executor beyond thresholds</li>
+              <li><strong>Policy gates:</strong> Financial/privacy/compliance checks at runtime</li>
+              <li><strong>Audit:</strong> Tamper‑evident decision ledger</li>
+            </ul>
+          </div>
+          <div class="card">
+            <h3>Rollout without regrets</h3>
+            <ul class="list">
+              <li><strong>Read‑only first:</strong> Simulations and diffs against live data</li>
+              <li><strong>Guarded writes:</strong> Dry‑runs, approvals, caps, and rollback</li>
+              <li><strong>Blast‑radius control:</strong> Canary, scope bands, kill switch</li>
+              <li><strong>Observability:</strong> Every action traced end‑to‑end</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- PILOT OFFER -->
+    <section class="section pilot reveal" id="pilot">
+      <div class="wrap">
+        <h2>Your zero‑regret pilot</h2>
+        <div class="grid-3">
+          <div class="card">
+            <h3>Scope</h3>
+            <p>Pick one painful, measurable flow (e.g., order‑to‑cash in EMEA, a plant changeover window, or a supplier capacity lane).</p>
+          </div>
+          <div class="card">
+            <h3>Setup (2–4 weeks)</h3>
+            <p>Charters, read‑only connectors, ontology mapping, replayable sims, and a decision ledger visible to audit.</p>
+          </div>
+          <div class="card">
+            <h3>Proof (4–8 weeks)</h3>
+            <p>Run continuous deliberation with approvals; guarded writes where safe. Instrument deltas to cycle time, service, cost, and cash.</p>
+          </div>
+        </div>
+        <div class="cta-center">
+          <a href="mailto:enterprise@businessinfinity.ai" class="btn btn-primary btn-lg">Schedule pilot design workshop</a>
+        </div>
+      </div>
+    </section>
+
+    <!-- ROI SKETCH -->
+    <section class="section roi reveal">
+      <div class="wrap">
+        <h2>Sketch your ROI</h2>
+        <p class="muted">Directional only — we’ll tune with your baselines.</p>
+        <div class="grid-2">
+          <form class="card form" id="roiForm">
+            <div class="form-row"><label>Annual revenue</label><input type="number" id="rev" value="1200000000"/></div>
+            <div class="form-row"><label>Gross margin (%)</label><input type="number" id="gm" value="28"/></div>
+            <div class="form-row"><label>Decision latency reduction (%)</label><input type="number" id="latency" value="35"/></div>
+            <div class="form-row"><label>Plan adherence uplift (%)</label><input type="number" id="adherence" value="15"/></div>
+            <div class="form-row"><label>Working capital reduction (%)</label><input type="number" id="wc" value="8"/></div>
+            <button type="button" id="calcBtn" class="btn btn-primary">Calculate</button>
+          </form>
+          <div class="card results">
+            <div class="result"><div class="label">Throughput lift</div><div class="value" id="throughput">$0</div></div>
+            <div class="result"><div class="label">Gross profit impact</div><div class="value" id="profit">$0</div></div>
+            <div class="result"><div class="label">Working capital freed</div><div class="value" id="working">$0</div></div>
+            <p class="small muted">Model: throughput ≈ latency + 0.5×adherence; WC baseline ≈ 20% revenue.</p>
+          </div>
+        </div>
+      </div>
     </section>
   </main>
 
-  <footer>
-    <p>&copy; 2025 Business Infinity – Built for the Enterprise Era</p>
+  <!-- FOOTER -->
+  <footer class="footer">
+    <div class="wrap foot">
+      <div>
+        <strong>Business Infinity</strong>
+        <div class="muted">Networked intelligence. Shared orchestration.</div>
+      </div>
+      <div class="muted">© 2025 Business Infinity</div>
+    </div>
   </footer>
 
   <script src="scripts.js"></script>
